# solafune-mine-detection

./: .gitignore  Makefile  README.md  pyproject.toml
notebooks/: 001_make_dataset.ipynb
scripts/: dataset.py  inference.py  run.py  steps.py  train.py  train_system.py
scripts/configs/: inference.yaml  train.yaml
scripts/configs/augmentation/: default.yaml
scripts/configs/criterion/: binary_cross_entropy.yaml  ce.yaml
scripts/configs/experiment/: default.yaml
scripts/configs/mlflow/: default.yaml
scripts/configs/model/: efficientnetv2_s.yaml  maxvit_tiny.yaml
scripts/configs/optimizers/: adamw.yaml
